--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,7 +1585,7 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,82461],[],[[4,0,1,0,[],[1,15088,18263],[]],[4,0,1,0,[],[1,33353,17165],[]],[4,0,1,0,[],[1,50520,10254],[]],[4,0,1,0,[],[1,60777,2761],[]],[4,0,1,0,[],[1,63544,16732],[]]],[],[5,5,5,5]];
+window.output["suite"] = [1,2,3,0,[],[1,0,53095],[],[[4,0,1,0,[],[1,16797,19175],[]],[4,0,1,0,[],[1,35974,3192],[]],[4,0,1,0,[],[1,39169,11642],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
@@ -1594,13 +1594,13 @@ window.output["strings"] = [];
 window.output["strings"] = window.output["strings"].concat(["*","*Bill Cycle","*C:\\Users\\shajuam\\Music\\Test_Cases\\Bill_Cycle.robot","*Bill_Cycle.robot","*Bill_Cycle_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:05","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:01:05","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:01:22","fail":0,"id":"s1","label":"Bill Cycle","name":"Bill Cycle","pass":5}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"Bill Cycle","name":"Bill Cycle","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1616789914376;
+window.output["baseMillis"] = 1616822014912;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 82526;
+window.output["generated"] = 53135;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
