--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,53095],[],[[4,0,1,0,[],[1,16797,19175],[]],[4,0,1,0,[],[1,35974,3192],[]],[4,0,1,0,[],[1,39169,11642],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[1,0,48275],[],[[4,0,1,0,[],[1,13094,16906],[]],[4,0,1,0,[],[1,30001,2549],[]],[4,0,1,0,[],[1,32551,2876],[]],[4,0,1,0,[],[1,35430,10681],[]]],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Bill Cycle","*C:\\Users\\shajuam\\Music\\Test_Cases\\Bill_Cycle.robot","*Bill_Cycle.robot","*Bill_Cycle_Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*GL Codes","*C:\\Users\\shajuam\\Music\\Test_Cases\\GL_Codes.robot","*GL_Codes.robot","*GL_Codes_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:53","fail":0,"id":"s1","label":"Bill Cycle","name":"Bill Cycle","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"GL Codes","name":"GL Codes","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1616822014912;
+window.output["baseMillis"] = 1616829751253;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 53135;
+window.output["generated"] = 48306;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
