--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,48275],[],[[4,0,1,0,[],[1,13094,16906],[]],[4,0,1,0,[],[1,30001,2549],[]],[4,0,1,0,[],[1,32551,2876],[]],[4,0,1,0,[],[1,35430,10681],[]]],[],[4,4,4,4]];
+window.output["suite"] = [1,2,3,0,[],[1,0,32902],[],[[4,0,1,0,[],[1,21601,9049],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*GL Codes","*C:\\Users\\shajuam\\Music\\Test_Cases\\GL_Codes.robot","*GL_Codes.robot","*GL_Codes_Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:33","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:00:33","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:00:48","fail":0,"id":"s1","label":"GL Codes","name":"GL Codes","pass":4}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1616829751253;
+window.output["baseMillis"] = 1616999390260;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 48306;
+window.output["generated"] = 32923;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
