--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,7 +1585,7 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,32902],[],[[4,0,1,0,[],[1,21601,9049],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,83916],[],[[4,0,1,0,[],[1,14158,21245],[]],[4,0,1,0,[],[1,35406,21092],[]],[4,0,1,0,[],[1,56501,21575],[]],[4,0,1,0,[],[1,78079,3597],[]]],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
@@ -1594,13 +1594,13 @@ window.output["strings"] = [];
 window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:09","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:09","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:00:33","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:08","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:08","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:24","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1616999390260;
+window.output["baseMillis"] = 1617268190264;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 32923;
+window.output["generated"] = 84061;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
