--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,83916],[],[[4,0,1,0,[],[1,14158,21245],[]],[4,0,1,0,[],[1,35406,21092],[]],[4,0,1,0,[],[1,56501,21575],[]],[4,0,1,0,[],[1,78079,3597],[]]],[],[4,4,4,4]];
+window.output["suite"] = [1,2,3,0,[],[1,0,46143],[],[[4,0,1,0,[],[1,9907,18816],[]],[4,0,1,0,[],[1,28726,3128],[]],[4,0,1,0,[],[1,31857,12119],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tax Formula","*C:\\Users\\shajuam\\Music\\Test_Cases\\Tax_Formula.robot","*Tax_Formula.robot","*Tax Formula Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:08","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:08","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:24","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":4}]];
+window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"Tax Formula","name":"Tax Formula","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617268190264;
+window.output["baseMillis"] = 1617288286417;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 84061;
+window.output["generated"] = 46175;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
