--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,46143],[],[[4,0,1,0,[],[1,9907,18816],[]],[4,0,1,0,[],[1,28726,3128],[]],[4,0,1,0,[],[1,31857,12119],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[1,0,56977],[],[[4,0,1,0,[],[1,14463,26993],[]],[4,0,1,0,[],[1,41459,3336],[]],[4,0,1,0,[],[1,44799,9893],[]]],[],[3,3,3,3]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tax Formula","*C:\\Users\\shajuam\\Music\\Test_Cases\\Tax_Formula.robot","*Tax_Formula.robot","*Tax Formula Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Tax Plan","*C:\\Users\\shajuam\\Music\\Test_Cases\\Tax_Plan.robot","*Tax_Plan.robot","*Tax Plan Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:34","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:34","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:46","fail":0,"id":"s1","label":"Tax Formula","name":"Tax Formula","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Tax Plan","name":"Tax Plan","pass":3}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617288286417;
+window.output["baseMillis"] = 1617446303843;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 46175;
+window.output["generated"] = 57022;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
