--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,56977],[],[[4,0,1,0,[],[1,14463,26993],[]],[4,0,1,0,[],[1,41459,3336],[]],[4,0,1,0,[],[1,44799,9893],[]]],[],[3,3,3,3]];
+window.output["suite"] = [1,2,3,0,[],[1,0,103462],[],[[4,0,1,0,[],[1,11233,23140],[]],[4,0,1,0,[],[1,34375,19985],[]],[4,0,1,0,[],[1,54365,21343],[]],[4,0,1,0,[],[1,75711,3073],[]],[4,0,1,0,[],[1,78786,22415],[]]],[],[5,5,5,5]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tax Plan","*C:\\Users\\shajuam\\Music\\Test_Cases\\Tax_Plan.robot","*Tax_Plan.robot","*Tax Plan Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:40","fail":0,"label":"Critical Tests","pass":3},{"elapsed":"00:00:40","fail":0,"label":"All Tests","pass":3}],[],[{"elapsed":"00:00:57","fail":0,"id":"s1","label":"Tax Plan","name":"Tax Plan","pass":3}]];
+window.output["stats"] = [[{"elapsed":"00:01:30","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:01:30","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:01:43","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":5}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617446303843;
+window.output["baseMillis"] = 1617447256831;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 57022;
+window.output["generated"] = 103533;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
