--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,94678],[],[[4,0,1,0,[],[1,13452,20272],[]],[4,0,1,0,[],[1,33727,19254],[]],[4,0,1,0,[],[1,52984,17525],[]],[4,0,1,0,[],[1,70512,3561],[]],[4,0,1,0,[],[1,74076,18395],[]]],[],[5,5,5,5]];
+window.output["suite"] = [1,2,3,0,[],[1,0,118632],[],[[4,0,1,0,[],[1,10995,36780],[]],[4,0,1,0,[],[1,47777,31903],[]],[4,0,1,0,[],[1,79682,32176],[]],[4,0,1,0,[],[1,111860,4498],[]]],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Discount","*C:\\Users\\shajuam\\Music\\Test_Cases\\Discount.robot","*Discount.robot","*Discounts Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:19","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:01:19","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:01:35","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":5}]];
+window.output["stats"] = [[{"elapsed":"00:01:45","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:45","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:59","fail":0,"id":"s1","label":"Discount","name":"Discount","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617640402029;
+window.output["baseMillis"] = 1617725742361;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 94750;
+window.output["generated"] = 118714;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
