--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,118632],[],[[4,0,1,0,[],[1,10995,36780],[]],[4,0,1,0,[],[1,47777,31903],[]],[4,0,1,0,[],[1,79682,32176],[]],[4,0,1,0,[],[1,111860,4498],[]]],[],[4,4,4,4]];
+window.output["suite"] = [1,2,3,0,[],[1,0,80440],[],[[4,0,1,0,[],[1,12116,20060],[]],[4,0,1,0,[],[1,32177,4095],[]],[4,0,1,0,[],[1,36274,19062],[]],[4,0,1,0,[],[1,55340,3551],[]],[4,0,1,0,[],[1,58893,19363],[]]],[],[5,5,5,5]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Discount","*C:\\Users\\shajuam\\Music\\Test_Cases\\Discount.robot","*Discount.robot","*Discounts Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:45","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:45","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:59","fail":0,"id":"s1","label":"Discount","name":"Discount","pass":4}]];
+window.output["stats"] = [[{"elapsed":"00:01:06","fail":0,"label":"Critical Tests","pass":5},{"elapsed":"00:01:06","fail":0,"label":"All Tests","pass":5}],[],[{"elapsed":"00:01:20","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":5}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617725742361;
+window.output["baseMillis"] = 1617727878066;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 118714;
+window.output["generated"] = 80504;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
