--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,736263],[],[[4,0,1,0,[],[1,53932,41383],[]],[4,0,1,0,[],[1,95317,40134],[]],[4,0,1,0,[],[1,135453,41164],[]],[4,0,1,0,[],[1,176619,52290],[]],[4,0,1,0,[],[1,228912,45014],[]],[4,0,1,0,[],[1,273928,45233],[]],[4,0,1,0,[],[1,319163,40013],[]],[4,0,1,0,[],[1,359178,47298],[]],[4,0,1,0,[],[1,406478,35224],[]],[4,0,1,0,[],[1,441704,33487],[]],[4,0,1,0,[],[1,475193,43832],[]],[4,0,1,0,[],[1,519028,37693],[]],[4,0,1,0,[],[1,556722,39294],[]],[4,0,1,0,[],[1,596020,57308],[]],[4,0,1,0,[],[1,653330,37360],[]],[4,0,1,0,[],[1,690693,43299],[]]],[],[16,16,16,16]];
+window.output["suite"] = [1,2,3,0,[],[1,0,64658],[],[[4,0,1,0,[],[1,10234,19105],[]],[4,0,1,0,[],[1,29342,3001],[]],[4,0,1,0,[],[1,32345,14068],[]],[4,0,1,0,[],[1,46415,16004],[]]],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Discount","*C:\\Users\\shajuam\\Music\\Test_Cases\\Discount.robot","*Discount.robot","*Discounts Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Bill Cycle","*C:\\Users\\shajuam\\Music\\Test_Cases\\Bill_Cycle.robot","*Bill_Cycle.robot","*Bill_Cycle_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:11:20","fail":0,"label":"Critical Tests","pass":16},{"elapsed":"00:11:20","fail":0,"label":"All Tests","pass":16}],[],[{"elapsed":"00:12:16","fail":0,"id":"s1","label":"Discount","name":"Discount","pass":16}]];
+window.output["stats"] = [[{"elapsed":"00:00:52","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:00:52","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"Bill Cycle","name":"Bill Cycle","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617774456905;
+window.output["baseMillis"] = 1617777642096;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 736456;
+window.output["generated"] = 64696;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
