--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,64658],[],[[4,0,1,0,[],[1,10234,19105],[]],[4,0,1,0,[],[1,29342,3001],[]],[4,0,1,0,[],[1,32345,14068],[]],[4,0,1,0,[],[1,46415,16004],[]]],[],[4,4,4,4]];
+window.output["suite"] = [1,2,3,0,[],[0,0,83010],[],[[4,0,1,0,[],[0,28766,25877,5],[]],[4,0,1,0,[],[0,54646,26127,5],[]]],[],[2,0,2,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Bill Cycle","*C:\\Users\\shajuam\\Music\\Test_Cases\\Bill_Cycle.robot","*Bill_Cycle.robot","*Bill_Cycle_Test"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Discount","*C:\\Users\\shajuam\\Music\\Test_Cases\\Discount.robot","*Discount.robot","*Discounts Test","*NoSuchElementException: Message: Could not locate element with visible text: GL_2124\n"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:52","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:00:52","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:05","fail":0,"id":"s1","label":"Bill Cycle","name":"Bill Cycle","pass":4}]];
+window.output["stats"] = [[{"elapsed":"00:00:52","fail":2,"label":"Critical Tests","pass":0},{"elapsed":"00:00:52","fail":2,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:23","fail":2,"id":"s1","label":"Discount","name":"Discount","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617777642096;
+window.output["baseMillis"] = 1617875681523;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 64696;
+window.output["generated"] = 83043;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
