--- a/Test_Cases/report.html
+++ b/Test_Cases/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,87064],[],[[4,0,1,0,[],[0,18544,27018,5],[]],[4,0,1,0,[],[0,45569,25373,5],[]],[4,0,1,0,[],[0,70947,13888,6],[]],[4,0,1,0,[],[0,84838,17,7],[]]],[],[4,0,4,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,84619],[],[[4,0,1,0,[],[1,19664,29596],[]],[4,0,1,0,[],[1,49265,4850],[]],[4,0,1,0,[],[1,54120,4779],[]],[4,0,1,0,[],[1,58904,23409],[]]],[],[4,4,4,4]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test","*NoSuchElementException: Message: Could not locate element with visible text: GL_2124\n","*TypeError: 'NoneType' object is not iterable","*NoSuchWindowException: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=89.0.4389.114)\n"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Charges","*C:\\Users\\shajuam\\Music\\Test_Cases\\Charges.robot","*Charges.robot","*Charges_Test"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:06","fail":4,"label":"Critical Tests","pass":0},{"elapsed":"00:01:06","fail":4,"label":"All Tests","pass":0}],[],[{"elapsed":"00:01:27","fail":4,"id":"s1","label":"Charges","name":"Charges","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:03","fail":0,"label":"Critical Tests","pass":4},{"elapsed":"00:01:03","fail":0,"label":"All Tests","pass":4}],[],[{"elapsed":"00:01:25","fail":0,"id":"s1","label":"Charges","name":"Charges","pass":4}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1617880056464;
+window.output["baseMillis"] = 1617881487504;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 87104;
+window.output["generated"] = 84699;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
